Darwin Build Scripts Change History
-----------------------------------

Release X.Y.Z [now]
	- darwinbuild: redo_prebinding to create a canonical Mach-O prior to
	  registering for reproducible manifests.
	- Added synthfat script to synthesize fat dylibs from thin dylibs
	- Added darwinmaster.sh for creating bootable CDs
	- Added packageRoots.sh to archive most recent Roots for the build
	- Added thinFile.sh to thin a single Mach-O file
	- Added thinPackages.sh to create multiple thin Packages from a fat one
	- darwinbuild.common: added CheckDarwinBuildRoot function
	- darwinxref: added support for CFData in the sqlite database
Release 0.7.0 [12-Aug-2005]
	- darwinbuild: print Xcode version when building Xcode-based projects
	- darwinbuild: Add a -load option which loads the BuildRoot/ with a
	  single project
	- darwinbuild: Add a -loadonly option which loads
	  the BuildRoot/ but doesn't start the build
	- darwinbuild: use -stdin mode to register to register
	  files from pre-built .tar.gz roots.
	- darwinxref: Add a -stdin mode to the "register" plugin
	  to accept file paths to register
	- darwintrace: Be more aggressive about logging full paths
	- darwinbuild: Patch files can use gzip, bzip2, or no compression,
	  and the can be applied with either -p0 or -p1
	- darwinbuild: Modify installXcodebuild so that it doesn't interfere
	  with the frameworks/dylibs that have already been installed
	- darwinxref: Create the necessary tables to that "resolveDeps" works
	- darwinxref: Add "-lib" and "-staticlib" to "dependencies"
	  plugin
	- darwinbuild: Install GCC 4.0 Xcode compiler specification,
	  and use it as a template to synthesize a 3.5 .xcspec. This
	  allows some Libsystem contributors to be built chrooted
	- darwinbuild: allow -depsbuild multiple times to download
	  dependent roots from one of several builds
	- darwinbuild: add -source to download and patch sources
	- darwinbuild: query DB for patch files, download them from
	  source_sites